# opencode-monitor

./: README.md  RELEASING.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  opencode.rs  pi.rs  prompts.rs
src-tauri/src/opencode/: client.rs  commands.rs  mod.rs
src-tauri/src/pi/: client.rs  commands.rs  mod.rs
src/components/: Composer.tsx  ComposerInput.tsx
src/features/composer/components/: Composer.tsx  ComposerInput.tsx  ReviewInlinePrompt.tsx
src/features/composer/hooks/: useComposerAutocompleteState.ts
src/features/layout/hooks/: useLayoutNodes.tsx
src/features/threads/hooks/: useThreadMessaging.ts  useThreads.ts
src/hooks/: useComposerAutocomplete.ts  useComposerAutocompleteState.ts  useCustomPrompts.ts  useThreads.ts  useUpdater.ts
src/services/: tauri.ts
