[package]
name = "codex-monitor"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "codex-monitor"

[features]
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "codex_monitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-liquid-glass = "0.1"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "net", "io-util", "process", "rt", "sync", "time"] }
uuid = { version = "1", features = ["v4"] }
tauri-plugin-dialog = "2"
git2 = "0.20.3"
base64 = "0.22"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
ignore = "0.4.25"
portable-pty = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
libc = "0.2"
chrono = { version = "0.4", features = ["clock"] }
shell-words = "1.1"
toml = "0.8"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\"))".dependencies]
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"

[target."cfg(target_os = \"windows\")".dependencies]
cpal = "0.15"
winapi = { version = "0.3", features = ["winuser", "shellapi"] }

[target."cfg(target_os = \"linux\")".dependencies]
cpal = "0.15"
whisper-rs = "0.12"
sha2 = "0.10"

[target."cfg(target_os = \"macos\")".dependencies]
cpal = "0.15"
whisper-rs = "0.12"
sha2 = "0.10"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSAppearance", "NSResponder", "NSWindow"] }
objc2-foundation = { version = "0.3", features = ["NSString"] }
objc2-av-foundation = { version = "0.3", features = ["AVCaptureDevice", "AVMediaFormat"] }
block2 = "0.6"
